Refactor RoutePlanningServiceImpl to replace Collectors.toList() with List.toList() for improved readability; update RoutePlanningConfigTest and RoutePlanningServiceIT to remove public access modifier from test classes.